--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,40 @@
 @charset "utf-8";
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font: 16px/1.5 normal "Nanum Gothic", "Noto Sans KR", sans-serif;
+  padding-top: 56px; /* 네비게이션 바의 높이만큼 패딩 추가 */
+}
+
+.section {
+  height: 100vh; /* 뷰포트 높이의 100% */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* 각 섹션에 다른 배경색 지정 (선택사항) */
+#section1 {
+  background-color: #f8f9fa;
+}
+#section2 {
+  background-color: #d1c8f7;
+}
+#section3 {
+  background-color: #f7c8e5;
+}
+
+/* 각 링크 아이콘 */
+.download-icon {
+  width: 18px; /* 아이콘 크기를 더 크게 */
+  height: 18px;
+  vertical-align: middle; /* 수직 정렬 방식 변경 */
+  margin-bottom: 2px; /* 약간 위로 올리기 */
+}
+
+/* 활성 링크 내비게이션 */
+.nav-link.active {
+  font-weight: bold;
 }
